fix: fix nav alignment

--- a/style.scss
+++ b/style.scss
@@ -199,13 +199,12 @@ nav button {
     height: 100%;
     padding-top: 0;
     padding-right: 10px;
-    //border: 1px solid black;
 }
 
 
 // Seção estátisticas
 .numbers-statistcs {
-    background-color: #F3F5F8;
+    background-color: #ECEFF3;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -280,7 +279,7 @@ nav button {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: stretch; //
+    align-items: stretch;
     gap: 5%;
     width: 85vw;
 
@@ -301,7 +300,7 @@ nav button {
     width: 491px;
     height: 481px;
     border-radius: 8px;
-    background-color: #F3F5F8;
+    background-color: #ECEFF3;
     padding: 2%;
     flex: 1; //
     min-width: 300px;
@@ -365,7 +364,7 @@ nav button {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: #F3F5F8;
+    background-color: #ECEFF3;
     padding-bottom: 7rem;
     justify-content: center;
 }
@@ -483,7 +482,6 @@ nav button {
     display: flex;
     justify-content: center;
     gap: 3vw;
-    margin: 10px;
 
 }
 
@@ -500,6 +498,7 @@ nav button {
     width: 338px;
     height: 300px;
     gap: 30px;
+
 
 }
 
@@ -543,7 +542,7 @@ nav button {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #F3F5F8;
+    background-color: #ECEFF3;
     padding-bottom: 7rem;
     height: 405px;
     text-align: center;
@@ -830,18 +829,23 @@ nav button {
     nav {
         gap: 17px;
         align-items: center;
+        justify-content: center;
+
+        .menu {
+            align-items: center;
+            justify-content: center;
+
+            a {
+                font-size: 15px;
+                flex-wrap: nowrap;
+                text-align: center;
+            }
+
+        }
 
         img {
             height: 30px;
             width: 160px;
-        }
-
-        ul li a {
-            font-size: 15px;
-            flex-wrap: nowrap;
-            align-items: center;
-            justify-content: center;
-            text-align: center;
         }
 
         button {
@@ -854,6 +858,7 @@ nav button {
     .hero-page {
         width: 100%;
         align-items: center;
+
         .hero {
             margin: 15px;
         }
@@ -866,6 +871,7 @@ nav button {
         h4 {
             text-align: justify;
             padding: 0;
+            margin: 5px;
         }
 
         button {
@@ -997,6 +1003,7 @@ nav button {
             text-align: center;
             font-size: 30px;
             padding: 0;
+            margin: 0 3px;
         }
 
         h3 {
